A little cleanup of performance-test code
git-svn-id: https://svn.dbc.dk/repos/dataio/trunk@71669 b87a6194-a221-0410-ad6f-3b8ec35bba13